# hotel-designer-toolkit

./: .gitattributes  .gitignore  main.js  package-lock.json  package.json
.github/workflows/: release.yml
client/: index.html  package-lock.json  package.json  vite.config.js
client/src/: App.jsx  index.css
client/src/components/: FileUploader.css  FileUploader.jsx  Layout.css  Layout.jsx  OptionGroup.css  OptionGroup.jsx  ProgressBar.css  ProgressBar.jsx  ResultPanel.css  ResultPanel.jsx  Sidebar.css  Sidebar.jsx  ToolHeader.css  ToolHeader.jsx
client/src/pages/: Dashboard.css  Dashboard.jsx  Diagnostics.jsx  ImageConvert.jsx  ImageSplit.jsx  ImageStitch.jsx  ToolPage.css  VideoFrames.jsx  VideoTranscode.jsx
client/src/services/: api.js
server/: index.js  package-lock.json  package.json
server/services/: ImageService.js  VideoService.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: image_cmds.rs  main.rs  system_check.rs  video_cmds.rs
